# even-flow

./: .gitignore  README.md  manage.py  pyproject.toml
app_tasks/: __init__.py
app_tasks/views/: __init__.py  my_function.py  print_hello.py
core_flow/: Dockerfile.airflow  Dockerfile.db  asgi.py  docker-compose.yaml  initializer.sql  settings.py  urls.py  wsgi.py
core_flow/dags/: on_error_callback.py
core_flow/dags/course-dag/: 0-bash-operator-dag.py  0-primer-dag.py  1-segundo-dag.py  10-branch-python-operator.py  2-python-operator-dag.py  3-dependencies.py  5.1-orchestration.py  5.2-ochestration.py  5.3-orchestration.py  6.1-monitoring.py  6.2-monitoring.py  7.1-external-task-sensor.py  7.2-external-task-sensor.py  7.3-file-sensor.py  8-templating.py  9-xcoms.py
core_flow/dags/custom-dags/: print_bash.py  xcoms.py
core_flow/dags/dags-I/: 0-primer-dag.py  1-seguindo-dag.py
core_flow/dags/dags-II/: 0-bash-operator-dag.py  1-python-operator-dag.py
core_flow/dags/empty-dags/: 0-primer-dag.py
database_tasks/: apps.py
