[tool.poetry]
name = "even-flow"
version = "0.1.0"
description = ""
authors = ["IJMadalenA <developmentim@qaleon.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^4.2"
apache-airflow = "^2.5.3"
apache-airflow-providers-slack = "^7.2.0"
apache-airflow-providers-postgres = "^5.4.0"
pandas = "^2.0.0"
nltk = "^3.8.1"
tomotopy = "^0.12.4"
django-utils = "^0.0.2"
scikit-learn = "^1.2.2"
# Pendulum tiende a dar problemas con su instalación, para resolverlo basta con ejecutar este comando:
# sudo apt-get install python3-distutils
pendulum = "^2.1.2"
poetry = "^1.4.2"
django-environ = "^0.10.0"
environ = "^1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
